Version 2.7.6dev:

* Warn when uae_cachesize is used without jit_compiler enabled.
* Theme options override options from config.

Version 2.7.5dev:

* Fix abort in OpenAL on OS X on shutdown.
* On x86-64, do not try to use "32-bit memory" unless JIT is enabled.
* If x87_fldcw dynamic function cannot be created, fall back to inline asm.
* Fix loading controller configs from non-ASCII paths on Windows.
* Better (build-time) OpenAL detection on OS X.
* New configure option --with-libmpeg2=yes/builtin (no won't work yet),
  defaults to yes (using system library).
* Fix additional custom joystick ports.
* New boolean option full_keyboard to set the initial state.
* Auto-choose joystick device for port 0 when not started in mouse mode.
* Support deflate compression in fs-uae.dat.
* Updated emulation core from WinUAE 3210.

Version 2.7.4dev:

* New action_mute_floppy_sounds, mapped to MOD+N by default.
* Added support for audioprev, audionext, audiostop, audioplay keys.
* Map audioprev, audionext and audioplay to disk swapper actions by default.
* Show on-screen messages when using disk swapper prev/next/insert actions.
* New option relative_paths (see docs).
* Support for three additional custom "joystick ports" (maps to Amiga keys).
* Also recognize .ipf and .dms floppy paths as standalone parameters.
* Fixed building with ./configure --disable-drivesound --disable-slirp
  --disable-prowizard --disable-cdtv --disable-savestate
  --disable-parallel-port and others.
* Can build with many CPU emu cores disabled.
* Some cleanup in the configure script.
* Remove dependency on GLU.
* Do not use built-in libmpeg2.
* Imported updated translations from crowdin.com.
* Updated emulation core from WinUAE 3200b18.

Version 2.7.3dev:

* Support for multimedia keys: volume up, volume down and mute.
* New shortcut Mod+K to toggle full keyboard emulation.
* Using (Left) Alt (Cmd on OS X) as default keyboard shortcut modifier.