@@ -1,8 +1,7 @@
 Description: Floppy Drive Volume
 Type: integer
-Default: 67
+Default: 25
 Example: 0
 Range: 0 - 100
 
 Set volume to 0 to disable floppy drive sounds. Max volume is 100.
-The default value is 67.
