@@ -470,7 +470,7 @@ void fs_uae_configure_floppies()
     int volume = fs_config_get_int_clamped(
                 OPTION_FLOPPY_DRIVE_VOLUME, 0, 100);
     if (volume == FS_CONFIG_NONE) {
-        volume = 67;
+        volume = 25;
     }
     if (volume == 0) {
         for (int i = 0; i < 4; i++) {
