@@ -1,5 +1,6 @@
 Version 2.7.6dev:
 
+* Lowered default floppy drive sound volume.
 * Warn when uae_cachesize is used without jit_compiler enabled.
 * Theme options override options from config.
 
